load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    "//proto:compiler.bzl",
    "go_proto_compiler",
)
load(
    "//go/private/rules:transition.bzl",
    "non_go_reset_target",
)
load(
    "//proto/wkt:well_known_types.bzl",
    "PROTO_RUNTIME_DEPS",
    "WELL_KNOWN_TYPES_APIV2",
)

go_proto_compiler(
    name = "go_proto_bootstrap",
    visibility = ["//visibility:public"],
    deps = PROTO_RUNTIME_DEPS,
)

go_proto_compiler(
    name = "go_proto",
    visibility = ["//visibility:public"],
    deps = PROTO_RUNTIME_DEPS + WELL_KNOWN_TYPES_APIV2,
)

go_proto_compiler(
    name = "go_grpc",
    options = ["plugins=grpc"],
    visibility = ["//visibility:public"],
    deps = PROTO_RUNTIME_DEPS + WELL_KNOWN_TYPES_APIV2 + [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

non_go_reset_target(
    name = "protoc",
    dep = "@com_google_protobuf//:protoc",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_rules",
    testonly = True,
    srcs = glob(["*.bzl"]) + ["//proto/wkt:all_rules"],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]) + ["//proto/wkt:all_files"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "compiler",
    srcs = ["compiler.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//go:def",
        "//go/private/rules:transition",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    visibility = ["//visibility:public"],
    # Don't list dependency on @rules_proto//proto:defs
    deps = [
        "//go:def",
        "//go/private:providers",
        "//proto:compiler",
    ],  # keep
)
